--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.anand.bluetoothcamera.MainActivity">
-
+    tools:context="com.anand.bluetoothcamera.MainActivity"
+    >
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
-
-
+        android:orientation="vertical"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-
-
+            android:orientation="vertical"
+            >
             <SurfaceView
                 android:id="@+id/surfaceview2"
                 android:layout_width="150dp"
                 android:visibility="gone"
-                android:layout_height="150dp" />
-
+                android:layout_height="150dp"
+                />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
+                android:orientation="horizontal"
+                >
                 <SurfaceView
                     android:id="@+id/surfaceview"
                     android:layout_width="150dp"
-                    android:layout_height="150dp" />
-
+                    android:layout_height="150dp"
+                    />
                 <ImageView
                     android:id="@+id/previewImage"
                     android:layout_width="150dp"
-                    android:layout_height="150dp" />
-
-
+                    android:layout_height="150dp"
+                    />
             </LinearLayout>
-
-
             <Button
                 android:id="@+id/button_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Strat Camera" />
-
+                android:text="Strat Camera"
+                />
             <Button
                 android:id="@+id/stop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Stop Camera" />
-
+                android:text="Stop Camera"
+                />
             <Button
                 android:id="@+id/capture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Capture" />
-
-
+                android:text="Capture"
+                />
         </LinearLayout>
-
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
